--- a/test/fixtures/shadow-dom-frame.html
+++ b/test/fixtures/shadow-dom-frame.html
@@ -5,11 +5,10 @@
 </head>
 <body>
 	<div id="fixture"></div>
-	<iframe src="shadow-dom-frame.html" title="Shadow DOM frame"></iframe>
 	<script>
 		var element = document.getElementById('fixture');
 		var shadowRoot = element.attachShadow({mode: 'open'});
-		shadowRoot.innerHTML = '<div role="bananas">Text</div>';
+		shadowRoot.innerHTML = '<div aria-role="2bananas">Text</div>';
 	</script>
 </body>
 </html>
